--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -18,15 +18,15 @@ jobs:
         with:
           python-version: '3.12'
       
-      - name: Install dependencies
-        run: |
-          pip install uv
-          uv pip install --system claude-code-sdk anyio
+      # - name: Install dependencies
+      #   run: |
+      #     pip install uv
+      #     uv pip install --system claude-code-sdk anyio
       
-      - name: Install Claude Code CLI
-        run: npm install -g @anthropic-ai/claude-code
+      # - name: Install Claude Code CLI
+      #   run: npm install -g @anthropic-ai/claude-code
       
-      - name: Run code review
-        env:
-          ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
-        run: python code_checker.py
+      # - name: Run code review
+      #   env:
+      #     ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
+      #   run: python code_checker.py
