--- a/.github/workflows/devin-code-review.yml
+++ b/.github/workflows/devin-code-review.yml
@@ -17,7 +17,7 @@ jobs:
         run: |
           curl --request POST \
             --url https://api.devin.ai/v1/sessions \
-            --header 'Authorization: Bearer <token>' \
+            --header 'Authorization: Bearer ${{ secrets.DEVIN_API_KEY }}' \
             --header 'Content-Type: application/json' \
             --data '{
               "prompt": "!eval_rules -- review the code diff against rules using playbook",
