--- a/.github/workflows/devin-code-review.yml
+++ b/.github/workflows/devin-code-review.yml
@@ -13,6 +13,19 @@ jobs:
         with:
           fetch-depth: 0  # Get full history for diff analysis
       
+      - name: Get git information
+        id: git-info
+        run: |
+          echo "commit_sha=${{ github.sha }}" >> $GITHUB_OUTPUT
+          echo "ref_name=${{ github.ref_name }}" >> $GITHUB_OUTPUT
+          echo "repository=${{ github.repository }}" >> $GITHUB_OUTPUT
+          echo "event_name=${{ github.event_name }}" >> $GITHUB_OUTPUT
+          if [ "${{ github.event_name }}" = "pull_request" ]; then
+            echo "base_ref=${{ github.base_ref }}" >> $GITHUB_OUTPUT
+            echo "head_ref=${{ github.head_ref }}" >> $GITHUB_OUTPUT
+            echo "pr_number=${{ github.event.pull_request.number }}" >> $GITHUB_OUTPUT
+          fi
+      
       - name: Run code review
         run: |
           curl --request POST \
@@ -20,7 +33,7 @@ jobs:
             --header 'Authorization: Bearer ${{ secrets.DEVIN_API_KEY }}' \
             --header 'Content-Type: application/json' \
             --data '{
-              "prompt": "!eval_rules -- review the code diff against rules using playbook for repo taylor-curran/windsurf-demo",
+              "prompt": "!eval_rules -- review the code diff against rules using playbook for repo ${{ github.repository }}. Git info: commit SHA ${{ github.sha }}, ref ${{ github.ref }}, branch ${{ github.ref_name }}, event ${{ github.event_name }}${{ github.event_name == 'pull_request' && format(', PR #{0} from {1} to {2}', github.event.pull_request.number, github.head_ref, github.base_ref) || '' }}",
               "idempotent": false
             }'
 
