--- a/.github/workflows/devin-code-test.yml
+++ b/.github/workflows/devin-code-test.yml
@@ -13,24 +13,27 @@ jobs:
         with:
           fetch-depth: 0  # Get full history for diff analysis
 
+      - name: Get git information
+        id: git-info
+        run: |
+          echo "commit_sha=${{ github.sha }}" >> $GITHUB_OUTPUT
+          echo "ref_name=${{ github.ref_name }}" >> $GITHUB_OUTPUT
+          echo "repository=${{ github.repository }}" >> $GITHUB_OUTPUT
+          echo "event_name=${{ github.event_name }}" >> $GITHUB_OUTPUT
+          if [ "${{ github.event_name }}" = "pull_request" ]; then
+            echo "base_ref=${{ github.base_ref }}" >> $GITHUB_OUTPUT
+            echo "head_ref=${{ github.head_ref }}" >> $GITHUB_OUTPUT
+            echo "pr_number=${{ github.event.pull_request.number }}" >> $GITHUB_OUTPUT
+          fi
+      
       - name: Run code review
         run: |
-          # For PRs, compare against the base branch
-          if [ "${{ github.event_name }}" = "pull_request" ]; then
-            DIFF_OUTPUT=$(git diff origin/${{ github.base_ref }}...HEAD)
-          else
-            DIFF_OUTPUT=$(git diff HEAD~1)
-          fi
-          
-          # Escape the diff content for JSON
-          ESCAPED_DIFF=$(echo "$DIFF_OUTPUT" | sed 's/\\/\\\\/g; s/"/\\"/g; s/$/\\n/' | tr -d '\n')
-          
           curl --request POST \
             --url https://api.devin.ai/v1/sessions \
             --header 'Authorization: Bearer ${{ secrets.DEVIN_API_KEY }}' \
             --header 'Content-Type: application/json' \
-            --data "{
-              \"prompt\": \"!ask Review this code diff: ${ESCAPED_DIFF}\",
-              \"idempotent\": false
-            }"
+            --data '{
+              "prompt": "!ask What code files do you have access to? Can you review the code changes in repo ${{ github.repository }}? Git info: commit SHA ${{ github.sha }}, ref ${{ github.ref }}, branch ${{ github.ref_name }}, event ${{ github.event_name }}${{ github.event_name == 'pull_request' && format(', PR #{0} from {1} to {2}', github.event.pull_request.number, github.head_ref, github.base_ref) || '' }}",
+              "idempotent": false
+            }'
 
