--- a/.github/workflows/devin-code-review-fix.yml
+++ b/.github/workflows/devin-code-review-fix.yml
@@ -1,4 +1,4 @@
-name: Code Test CI
+name: Code Fix CI
 
 on: 
   push:
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Get full history for diff analysis
-
+      
       - name: Get git information
         id: git-info
         run: |
@@ -33,7 +33,7 @@ jobs:
             --header 'Authorization: Bearer ${{ secrets.DEVIN_API_KEY }}' \
             --header 'Content-Type: application/json' \
             --data '{
-              "prompt": "!ask What code files do you have access to? Can you review the code changes in repo ${{ github.repository }}? Git info: commit SHA ${{ github.sha }}, ref ${{ github.ref }}, branch ${{ github.ref_name }}, event ${{ github.event_name }}${{ github.event_name == 'pull_request' && format(', PR #{0} from {1} to {2}', github.event.pull_request.number, github.head_ref, github.base_ref) || '' }}",
+              "prompt": "!eval_rules -- review the code diff against rules using playbook for repo ${{ github.repository }}. Git info: commit SHA ${{ github.sha }}, ref ${{ github.ref }}, branch ${{ github.ref_name }}, event ${{ github.event_name }}${{ github.event_name == 'pull_request' && format(', PR #{0} from {1} to {2}', github.event.pull_request.number, github.head_ref, github.base_ref) || '' }} then please make fixes to the code and create a PR",
               "idempotent": false
             }'
 
